# devops-masters-eadeployment-ca2-be

./: .flake8  .gitignore  Dockerfile  README.md  azure-pipelines.yml  create-service-manifest.yaml  pyproject.toml
.github/workflows/: cicd.yaml
bpcalc/: __init__.py  bpenums.py  database.py
src/main/java/bp/: BPPersistence.java
tests/: conftest.py
tests/features/: bp_calculator.feature
tests/unit/: test_core.py
tests/unit/bdd/: test_bp_calculator_steps.py
