[tool.poetry]
name = "bpcalc"
version = "0.1.0"
description = "Blood Preasure Calculator"
authors = ["Ben Stuart <ben@benstuart.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
requests = "^2.28.1"
flask-talisman = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
pytest-bdd = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"